FIX font family and spacing

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 h1 {
   font-family: 'Dawning of a New Day', cursive;
-  margin-top: -80px;
+  margin-top: -60px;
   font-weight: 400;
   font-size: 100px;
 }
@@ -32,9 +32,8 @@ h1 {
 }
 
 .bottom {
-  font-family: 'Dawning of a New Day', cursive;
-  font-weight: 400;
-  font-size: 24px;
+  font-weight: 200;
+  font-size: 20px;
   margin-top: auto;
 }
 
